# sandbox

./: README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci_cd_pipeline.yml  ci_cd_pipeline_dev.yml
data/: post.sql  post2.sql  sandbox.sql
data/intro_project/: customer_market_group_analysis.sql  marks-market-groups.csv  price_change_distribution.sql  stake_and_price.sql
data/more_ways_to_win/: 200_sims.csv  actual_cards.sql  cards.sql  cards_24-25_aft.csv  cards_24-25_all.csv  cards_25.sql  cards_25_team.sql  cards_sim.sql  cardsv2.sql  non active player cards premier league 2324.xlsx  reprice_cards.sql  shots_on_target_premier_league_23_24_24_25.csv  woodwork_23_24.sql  woodwork_hit.csv
data/same_team_multis/: same-team-multis.csv  same_team_2.sql  same_team_multis.sql
notebooks/: cards.ipynb  in_play_dt.ipynb  intro-project.ipynb  more_ways_to_win.ipynb  post.ipynb  price_change.ipynb  redshift_utils.py  same_team_multis.ipynb
scripts/: serve
utils/: redshift.py
