[tool.poetry]
name = "test-model-repo"
version = "1.0.5"
description = "test"
authors = [ "Data Pythons <data.pythons.support@paddypowerbetfair.com>",
            "Data Science" ]
license = "©2023 Flutter Entertainment plc. Proprietary and confidential."
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
pandas = "^2.2.2"
pyarrow = "^16.1.0"
sagemaker-training = "^4.7.4"
boto3 = "^1.39.3"
sagemaker-inference = "^1.10.1"
numpy = "^2.1.3"
fastparquet = "^2024.5.0"
multi-model-server = "^1.1.8"
ipykernel = "^6.28.0"
joblib = "^1.4.2"

[tool.poetry.group.test.dependencies]
moto = "^5.0"
mock = "^5.1"
pytest = "^8.2.0"

[tool.pytest.ini_options]
pythonpath = ["src", "src/model_code"]
testpaths = "src/tests"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
